--- a/Translations/German/text-effectPlayer-change.xml
+++ b/Translations/German/text-effectPlayer-change.xml
@@ -86,31 +86,31 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_EFFECTPLAYER_TRAIT_HERO_ARCHETYPE</zType>
-		<Translation>Anführer der link(TRAIT_HERO_ARCHETYPE)</Translation>
+		<Translation>Oberhaupt der link(TRAIT_HERO_ARCHETYPE)</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EFFECTPLAYER_TRAIT_TACTICIAN_ARCHETYPE</zType>
-		<Translation>Anführer der link(TRAIT_TACTICIAN_ARCHETYPE)</Translation>
+		<Translation>Oberhaupt der link(TRAIT_TACTICIAN_ARCHETYPE)</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EFFECTPLAYER_TRAIT_COMMANDER_ARCHETYPE</zType>
-		<Translation>Anführer der link(TRAIT_COMMANDER_ARCHETYPE)</Translation>
+		<Translation>Oberhaupt der link(TRAIT_COMMANDER_ARCHETYPE)</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EFFECTPLAYER_TRAIT_ZEALOT_ARCHETYPE</zType>
-		<Translation>Anführer der link(TRAIT_ZEALOT_ARCHETYPE)</Translation>
+		<Translation>Oberhaupt der link(TRAIT_ZEALOT_ARCHETYPE)</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EFFECTPLAYER_TRAIT_JUDGE_ARCHETYPE</zType>
-		<Translation>Anführer der link(TRAIT_JUDGE_ARCHETYPE)</Translation>
+		<Translation>Oberhaupt der link(TRAIT_JUDGE_ARCHETYPE)</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EFFECTPLAYER_TRAIT_ORATOR_ARCHETYPE</zType>
-		<Translation>Anführer der link(TRAIT_ORATOR_ARCHETYPE)</Translation>
+		<Translation>Oberhaupt der link(TRAIT_ORATOR_ARCHETYPE)</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EFFECTPLAYER_TRAIT_SCHOLAR_ARCHETYPE</zType>
-		<Translation>Anführer der link(TRAIT_SCHOLAR_ARCHETYPE)</Translation>
+		<Translation>Oberhaupt der link(TRAIT_SCHOLAR_ARCHETYPE)</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EFFECTPLAYER_TRAIT_SCHOLAR_ARCHETYPE_INQUIRY</zType>
@@ -118,11 +118,11 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_EFFECTPLAYER_TRAIT_BUILDER_ARCHETYPE</zType>
-		<Translation>Anführer der link(TRAIT_BUILDER_ARCHETYPE)</Translation>
+		<Translation>Oberhaupt der link(TRAIT_BUILDER_ARCHETYPE)</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EFFECTPLAYER_TRAIT_SCHEMER_ARCHETYPE</zType>
-		<Translation>Anführer der link(TRAIT_SCHEMER_ARCHETYPE)</Translation>
+		<Translation>Oberhaupt der link(TRAIT_SCHEMER_ARCHETYPE)</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EFFECTPLAYER_TRAIT_DIPLOMAT_ARCHETYPE</zType>
