--- a/Translations/German/text-infos-change.xml
+++ b/Translations/German/text-infos-change.xml
@@ -258,7 +258,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_CONCEPT_URBAN</zType>
-		<Translation><![CDATA[Stadt~Stadtteil<comment this text is an adjective>]]></Translation>
+		<Translation><![CDATA[Stadtteil~Stadtteil<comment this text is an adjective>]]></Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_CONCEPT_ZOC</zType>
