--- a/Translations/German/text-ui-change.xml
+++ b/Translations/German/text-ui-change.xml
@@ -2207,7 +2207,7 @@ Jeglicher ungespeicherter Forschritt geht verloren.</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_UI_VICTORY_CURRENT_LEADER</zType>
-		<Translation>Derzeitiger Anführer:</Translation>
+		<Translation>Derzeitig Führender:</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_UI_VICTORY_TIME_PROGRESS</zType>
