--- a/Translations/German/text-trait-change.xml
+++ b/Translations/German/text-trait-change.xml
@@ -448,7 +448,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_TRAIT_HORSEBANE</zType>
-		<Translation>Unheilig</Translation>
+		<Translation>Fluch der Pferde</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_TRAIT_HORSEBANE_GAIN_1</zType>
