Changed "Zugänglichkeit" to "Barrierefreiheit"

--- a/Translations/German/text-ui-change.xml
+++ b/Translations/German/text-ui-change.xml
@@ -1819,7 +1819,7 @@ Jeglicher ungespeicherter Forschritt geht verloren.</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_OPTIONS_MENU_TITLEBAR_ACCESSIBILITY</zType>
-		<Translation>Zugänglichkeit</Translation>
+		<Translation>Barrierefreiheit</Translation>
 	</Entry>
     <Entry>
         <zType>TEXT_OPTIONS_MENU_TITLEBAR_CONTROLS</zType>
