typos and tiny string fixes

--- a/Translations/German/text-eventOption-change.xml
+++ b/Translations/German/text-eventOption-change.xml
@@ -1083,7 +1083,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_EVENTOPTION_HARVEST_CAUGHT_IN_THE_ACT_OPTION_1</zType>
-		<Translation>Er ist viel nützlicher wenn er seiner Fplicht nachkommt.</Translation>
+		<Translation>Er ist viel nützlicher wenn er seiner Pflicht nachkommt.</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EVENTOPTION_HARVEST_MARVELOUS_SPECIMENS_OPTION_0</zType>
