fixed goals: should now link properly to the subject
- added some missing goals translation
- new things translated

--- a/Translations/German/text-eventStory-change.xml
+++ b/Translations/German/text-eventStory-change.xml
@@ -222,7 +222,7 @@ Wie sollen wir die königliche geburt feiern?]]></Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EVENTSTORY_HEIR_EDUCATION</zType>
-		<Translation>Die Zeit vergehrt zügig. {CHARACTER-0} wird schnell erwachsen und ist begierig zu lernen.
+		<Translation>Die Zeit vergeht zügig. {CHARACTER-0} wird schnell erwachsen und ist begierig zu lernen.
 
 Wie würdest du {CHARACTER-SHORT-0} gerne erziehen?</Translation>
 	</Entry>
