--- a/Translations/German/text-helptext-change.xml
+++ b/Translations/German/text-helptext-change.xml
@@ -3050,7 +3050,7 @@ Halte [{1_key}] um die Kontrollzone (ZOC) der Einheiten zu sehen.</Translation>
 	<!--City Capital Help-->
 	<Entry>
 		<zType>TEXT_HELPTEXT_CITY_CAPITAL_EFFECT</zType>
-		<Translation>Effekte wenn in der hauptstadt:</Translation>
+		<Translation>Effekte wenn in der Hauptstadt:</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_HELPTEXT_CITY_CAPITAL_NO_EFFECT</zType>
