--- a/Translations/German/text-memory-change.xml
+++ b/Translations/German/text-memory-change.xml
@@ -1871,7 +1871,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_MEMORYFAMILY_FOUNDED_FAMILY_SEAT</zType>
-		<Translation>Founded our link(CONCEPT_FAMILY_SEAT)</Translation>
+		<Translation>Gründete unseren link(CONCEPT_FAMILY_SEAT)</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_MEMORYFAMILY_REGAINED_CITY</zType>
