translated more family/relgion opnions
- fixed "Läger" to "lager"
- fixed a typo

--- a/Translations/German/text-effectCity-change.xml
+++ b/Translations/German/text-effectCity-change.xml
@@ -185,27 +185,27 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_EFFECTCITY_OPINIONFAMILY_FURIOUS</zType>
-		<Translation>Wütend (Familie)</Translation>
+		<Translation>Wütende Familie</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EFFECTCITY_OPINIONFAMILY_ANGRY</zType>
-		<Translation>Aufgebracht (Familie)</Translation>
+		<Translation>Aufgebrachte Familie</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EFFECTCITY_OPINIONFAMILY_UPSET</zType>
-		<Translation>Verärgert (Familie)</Translation>
+		<Translation>Verärgerte Familie</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EFFECTCITY_OPINIONFAMILY_PLEASED</zType>
-		<Translation>Zufrieden (Familie)</Translation>
+		<Translation>Zufriedene Familie</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EFFECTCITY_OPINIONFAMILY_FRIENDLY</zType>
-		<Translation>Wohlwollend (Familie)</Translation>
+		<Translation>Wohlwollende Familie</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EFFECTCITY_OPINIONRELIGION_FURIOUS</zType>
-		<Translation>Wütend (Religion)</Translation>
+		<Translation>Wütende Religion</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EFFECTCITY_OPINIONRELIGION_ANGRY</zType>
