--- a/Translations/German/text-eventOption-change.xml
+++ b/Translations/German/text-eventOption-change.xml
@@ -751,7 +751,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_EVENTOPTION_RUINS_BURLY_SMITH_LOOT</zType>
-		<Translation><![CDATA[Plündere ihre Metal Läger.]]></Translation>
+		<Translation><![CDATA[Plündere ihre Metal Lager.]]></Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EVENTOPTION_RUINS_GOOD_FENCES_PASTURE</zType>
