--- a/Translations/German/text-improvement-change.xml
+++ b/Translations/German/text-improvement-change.xml
@@ -41,7 +41,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_IMPROVEMENT_SETTLEMENT_3</zType>
-		<Translation>Lager~ein Lager~Läger</Translation>
+		<Translation>Lager~ein Lager~Lager</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_IMPROVEMENT_SETTLEMENT_4</zType>
@@ -73,7 +73,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_IMPROVEMENT_CAMP</zType>
-		<Translation>Lager~ein Lager~Läger</Translation>
+		<Translation>Lager~ein Lager~Lager</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_IMPROVEMENT_GROVE</zType>
