--- a/Translations/German/text-infos-change.xml
+++ b/Translations/German/text-infos-change.xml
@@ -1675,7 +1675,7 @@
 	</Entry>
 	<!-- InfoLanguage -->
 	<Entry>
-		<zType>TEXT_LANGUAGE_Translation</zType>
+		<zType>TEXT_LANGUAGE_ENGLISH</zType>
 		<Translation>Translation (US)</Translation>
 	</Entry>
 	<Entry>
