--- a/Translations/German/text-misc-change.xml
+++ b/Translations/German/text-misc-change.xml
@@ -316,7 +316,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_COGNOMEN_NEW</zType>
-		<Translation>>der Neue</Translation>
+		<Translation>der Neue</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_COGNOMEN_FOUNDER</zType>
@@ -508,7 +508,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_COGNOMEN_UNREADY</zType>
-		<Translation>der nicht bereite</Translation>
+		<Translation>der nicht Bereite</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_COGNOMEN_WEAK</zType>
